vpc.json
{
"AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This is to create a VPC",
    "Metadata": {

    },
    "Parameters": {
    
    "AZA": {
        "Description": "This is for Availability Zone A",
        "Type": "AWS::EC2::AvailabilityZone::Name"

    },
    "AZB": {
      "Description": "This is for Availability Zone B",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    
    },
    
    "PubSub1CIDR": {
        "Description": "CIDR block for public subnet 1",
        "Type": "String"
        
    },
    
    "PubSub2CIDR": {
        "Description": "CIDR block for public subnet 2",
        "Type": "String"
        
    },
    "PrtSub1CIDR": {
      "Description": "CIDR block for private subnet 1",
      "Type": "String"
    
    },
    "PrtSub2CIDR": {
      "Description": "CIDR block for private subnet 2",
      "Type": "String"
    },
    "VPCCIDR": {
      "Description": "CIDR block for VPC",
      "Type": "String"
    }
  },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
"DevVpc": {
  "Type": "AWS::EC2::VPC",
  "Properties": {
    "CidrBlock": { "Ref": "VPCCIDR" },
    "Tags":[ { "Key": "name", "Value":  "DevVpc" }]
  }
},

"DevVpcIgw": {
  "Type": "AWS::EC2::InternetGateway",
  "Properties": {
    "Tags":[ { "Key": "name", "Value":  "DevVpcIgw" }]
  }
},
"AttachGateway": {
  "Type": "AWS::EC2::VPCGatewayAttachment",
  "Properties": {
    "VpcId": {"Ref": "DevVpc" },
    "InternetGatewayId": { "Ref": "DevVpcIgw" }
  }
},

"DevVpcRtb": {
  "Type": "AWS::EC2::RouteTable",
  "Properties": {
    "VpcId": {"Ref": "DevVpc" },
    "Tags":[ { "Key": "name", "Value":  "DevVpcRtb" }]
  }
},

"PubRt": {
  "Type": "AWS::EC2::Route",
  "Properties": {
    "RouteTableId": { "Ref": "DevVpcRtb" },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": { "Ref": "DevVpcIgw" }
  }
},

"PubSubAss": {
  "Type": "AWS::EC2::SubnetRouteTableAssociation",
  "Properties": {
    "SubnetId": { "Ref": "DevVpcPubSub1" },
    "RouteTableId": { "Ref": "DevVpcRtb" }
  }
},
"PubSubAss1": {
  "Type": "AWS::EC2::SubnetRouteTableAssociation",
  "Properties": {
    "SubnetId": { "Ref": "DevVpcPubSub2" },
    "RouteTableId": { "Ref": "DevVpcRtb" }
  }
},

"DevVpcPubSub1": {
  "Type": "AWS::EC2::Subnet",
  "Properties": {
    "MapPublicIpOnLaunch": "true",
    "AvailabilityZone": { "Ref": "AZA" },
    "VpcId": {"Ref": "DevVpc" },
    "CidrBlock": { "Ref": "PubSub1CIDR" }
    ,
    "Tags": [ { "Key": "name", "Value":  "DevVpcPubSub1" }]
  }
},

"DevVpcPrtSub1": {
  "Type": "AWS::EC2::Subnet",
  "Properties": {
    "AvailabilityZone":  { "Ref": "AZA" },
    "VpcId": {"Ref": "DevVpc" },
    "CidrBlock": { "Ref": "PrtSub1CIDR" },
    "Tags": [ { "Key": "name", "Value":  "DevVpcPrtSub1" }]
  }
},

"DevVpcPubSub2": {
  "Type": "AWS::EC2::Subnet",
  "Properties": {
    "MapPublicIpOnLaunch": "true",
    "AvailabilityZone": { "Ref": "AZB" },
    "VpcId": {"Ref": "DevVpc" },
    "CidrBlock": { "Ref": "PubSub2CIDR" },
    "Tags": [ { "Key": "name", "Value":  "DevVpcPubSub2" }]
  }
},

"DevVpcPrtSub2": {
  "Type": "AWS::EC2::Subnet",
  "Properties": {
    "AvailabilityZone": { "Ref": "AZB" },
    "VpcId": {"Ref": "DevVpc" },
    "CidrBlock": { "Ref": "PrtSub2CIDR" },
    "Tags": [ { "Key": "name", "Value":  "DevVpcPrtSub2" }]
  }
},


"cfwebserver": {
    "Type": "AWS::EC2::Instance",
    "Properties": {
        "KeyName": "CfKeyPair",
        "DisableApiTermination": "false",
        "ImageId": "ami-0b5eea76982371e91",
        "InstanceType": "t2.micro",
        "SubnetId":{"Ref":"DevVpcPubSub1"},
        "Monitoring": "false",
        "SecurityGroupIds" : [{ "Ref": "cfwebserversg" }],
        "Tags": [ { "Key": "name", "Value":  "cfwebserver" }]
            
}
        },

        
        "cfwebserversg" : {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties" : {
            "GroupDescription" : "This is used for CloudFormation webserver",
            "SecurityGroupIngress" : [ {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
        },
        {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
        },
        {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
        },
        {
          "IpProtocol": "tcp",
            "FromPort": 3389,
            "ToPort": 3389,
            "CidrIp": "0.0.0.0/0"
          }],
            "VpcId" :  { "Ref": "DevVpc" },
            "Tags": [ { "Key": "name", "Value":  "cfwebserversg" }]
          }
        }
        

    },
    "Outputs": {

    }
}
